Fixed scrollbar appearing on code blocks

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,7 +94,7 @@ code,
 pre {
   font-family: 'Monoid', monospace;
   font-size: 0.9em;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 /*
